# autofragment-public

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  biological.html  cli.html  codecov.yml  core_concepts.html  development.html  environment-dev.yml  environment.yml  examples.html  genindex.html  index.html  installation.html  io_formats.html  materials.html  migration.html  multilevel.html  objects.inv  output.html  py-modindex.html  pyproject.toml  python_api.html  rules.html  search.html  searchindex.js
.doctrees/: biological.doctree  cli.doctree  core_concepts.doctree  development.doctree  examples.doctree  index.doctree  installation.doctree  io_formats.doctree  materials.doctree  migration.doctree  multilevel.doctree  output.doctree  python_api.doctree  rules.doctree
.doctrees/api/: autofragment.doctree  index.doctree
.doctrees/dev/: performance.doctree
.doctrees/guides/: algorithms.doctree  custom_rules.doctree  materials.doctree  output_formats.doctree  proteins.doctree  quickstart.doctree  water_clusters.doctree
.doctrees/partitioning/: geometric_tiling.doctree
.doctrees/theory/: clustering.doctree  graph_partitioning.doctree  mbe.doctree  qmmm.doctree  scoring.doctree
.github/workflows/: benchmark.yml  docs.yml  release.yml  test.yml
_downloads/573feaff90b3a2cd983a1e8cb39b5fa3/: 05_custom_scoring.ipynb
_downloads/bdd2c6eec1cef9b4f3b249fec8e55647/: 04_compare_algorithms.ipynb
_modules/: autofragment.html  index.html
_sources/: biological.md.txt  cli.md.txt  examples.md.txt  index.md.txt  installation.md.txt  io_formats.md.txt  materials.md.txt  multilevel.md.txt
_sources/api/: autofragment.rst.txt  index.md.txt
_sources/guides/: materials.md.txt
_sources/partitioning/: geometric_tiling.md.txt
_sources/theory/: clustering.md.txt  graph_partitioning.md.txt  mbe.md.txt  scoring.md.txt
api/: autofragment.html  index.html
api/_generated/: autofragment.core.html  (+75 more)
benchmarks/: bench_io.py  bench_partitioning.py  profile_partitioning.py
dev/: performance.html
docs/: Makefile  README.md  conf.py  core_concepts.md  development.md  make.bat  migration.md  output.md  python_api.md  rules.md
examples/: 4ZLY.cif  4ZLY_bio_example.ipynb  README.md  water_16_batch_example.ipynb  water_64_single_example.ipynb
guides/: algorithms.html  custom_rules.html  materials.html  output_formats.html  proteins.html  quickstart.html  water_clusters.html
partitioning/: geometric_tiling.html
tests/: conftest.py
theory/: clustering.html  graph_partitioning.html  mbe.html  qmmm.html  scoring.html
(+315 files in other folders)
